--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/drops.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/drops.html.twig
@@ -1,14 +1,14 @@
 {% extends "ICAPDropZoneBundle::layout.html.twig" %}
 {% block dropzone_breadcrumb %}
     <li class="active">
-        <i class="icon-file"></i>{{ dropZone.resourceNode.name }}
+        <i class=".glyphicon .glyphicon-file"></i>{{ dropZone.resourceNode.name }}
         <span class="divider">/</span>
     </li>
     <li class="active">Drop</li>
 {% endblock %}
 
 {% block dropzone_content %}
-    <div class="container-fluid container-dropzone">
+    <div class="container container-dropzone">
         <header>
             <a href="{{ path('icap_dropzone_edit', {'resourceId': dropZone.id}) }}">Edit</a>
         </header>
