--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editCommon.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editCommon.html.twig
@@ -13,9 +13,9 @@
             <a href="{{ path('icap_dropzone_drops', {'resourceId': dropZone.id}) }}">Drops</a>
         </header>
         <h2>Edit drop zone</h2>
-        <div class="navbar">
-            <div class="navbar-inner">
-                <ul class="nav">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
                     <li class="active">
                         <a href="{{ path('icap_dropzone_edit_common', {'resourceId': dropZone.id}) }}">
                             {{ 'Common'|trans }}
@@ -34,95 +34,139 @@
                 </ul>
             </div>
         </div>
-        <h3>Common information</h3>
-        <form class="form-horizontal" method="POST" action="{{ path('icap_dropzone_update_common', {'resourceId': dropZone.id}) }}">
+        <h3>{{ 'Common information'|trans }}</h3>
+        <form class="form-horizontal" role="form" method="POST" action="{{ path('icap_dropzone_update_common', {'resourceId': dropZone.id}) }}" {{ form_enctype(form) }}>
             {{ form_errors(form) }}
 
-            <h4>Instruction</h4>
-            <div class="control-group">
-                <div class="controls">
-                    {{ form_errors(form.instruction) }}
-                    {{ form_widget(form.instruction) }}
+            <h4>{{ 'Instruction'|trans }}</h4>
+            <div class="form-group">
+                {{ form_errors(form.instruction) }}
+                <div class="col-lg-offset-2 col-lg-10">
+                    {{ form_widget(form.instruction, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
-            <h4>Document type allowed</h4>
-            <div class="control-group">
-                <div class="controls">
+            <h4>{{ 'Document type allowed'|trans }}</h4>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
                     {{ form_errors(form.allowWorkspaceResource) }}
-                    <label class="checkbox">
-                        {{ form_widget(form.allowWorkspaceResource) }} {{ 'icap_dropzone_form_allowWorkspaceResource'|trans }}
-                    </label>
+                    <div class="checkbox">
+                        <label>
+                            {{ form_widget(form.allowWorkspaceResource) }} {{ 'icap_dropzone_form_allowWorkspaceResource'|trans }}
+                        </label>
+                    </div>
 
                     {{ form_errors(form.allowUpload) }}
-                    <label class="checkbox">
-                        {{ form_widget(form.allowUpload) }} {{ 'icap_dropzone_form_allowUpload'|trans }}
-                    </label>
+                    <div class="checkbox">
+                        <label>
+                            {{ form_widget(form.allowUpload) }} {{ 'icap_dropzone_form_allowUpload'|trans }}
+                        </label>
+                    </div>
 
                     {{ form_errors(form.allowUrl) }}
-                    <label class="checkbox">
-                        {{ form_widget(form.allowUrl) }} {{ 'icap_dropzone_form_allowUrl'|trans }}
-                    </label>
+                    <div class="checkbox">
+                        <label>
+                            {{ form_widget(form.allowUrl) }} {{ 'icap_dropzone_form_allowUrl'|trans }}
+                        </label>
+                    </div>
                 </div>
             </div>
-            <h4>Type of evaluation</h4>
-            <div class="control-group">
-                <div class="controls">
+            <h4>{{ 'Type of evaluation'|trans }}</h4>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
                     {{ form_errors(form.peerReview) }}
-                    {{ form_widget(form.peerReview) }}
+                    <div class="radio">
+                        <label>
+                            {{ 'icap_dropzone_form_StandardEvaluation'|trans }}
+                            {{ form_widget(form.peerReview.0) }}
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label>
+                            {{ 'icap_dropzone_form_PeerReviewEvaluation'|trans }}
+                            {{ form_widget(form.peerReview.1) }}
+                        </label>
+                    </div>
 
-                    <label class="radio peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                        {{ form_errors(form.expectedTotalCorrection) }}
-                        {{ 'icap_dropzone_form_expectedTotalCorrection'|trans }}
-                        {{ form_widget(form.expectedTotalCorrection, {'attr': {'class': 'col-lg-1'}}) }}
-                    </label>
-                    <label class="radio peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                        {{ form_errors(form.allowDropInReview) }}
-                        {{ 'icap_dropzone_form_allowDropInReview'|trans }}
-                        {{ form_widget(form.allowDropInReview) }}
-                    </label>
+                    <div class="col-lg-offset-1 row  peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                            <label style="font-weight: normal;">
+                                <div class="col-lg-2" style="padding-left: 0px; padding-right: 0px;">
+                                    {{ form_widget(form.expectedTotalCorrection, {'attr': {'class': 'form-control', 'type': 'number'}}) }}
+                                </div>
+                                <div class="col-lg-10" style="padding-top: 8px; padding-left: 8px;">
+                                    {{ form_errors(form.expectedTotalCorrection) }}
+                                    {{ 'icap_dropzone_form_expectedTotalCorrection'|trans }}
+                                </div>
+                            </label>
+                    </div>
+                    <div class="col-lg-offset-1 peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                        <div class="checkbox">
+                            <label>
+                                {{ form_errors(form.allowDropInReview) }}
+                                {{ 'icap_dropzone_form_allowDropInReview'|trans }}
+                                {{ form_widget(form.allowDropInReview) }}
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
             <h4>{{ 'Rating'|trans }}</h4>
-            <div class="control-group">
-                <div class="controls">
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
                     {{ form_errors(form.displayNotationToLearners) }}
-                    <label class="checkbox">
-                        {{ form_widget(form.displayNotationToLearners) }} {{ 'icap_dropzone_form_displayNotationToLearners'|trans }}
-                    </label>
+                    <div class="checkbox">
+                        <label>
+                            {{ form_widget(form.displayNotationToLearners) }} {{ 'icap_dropzone_form_displayNotationToLearners'|trans }}
+                        </label>
+                    </div>
 
                     {{ form_errors(form.displayNotationMessageToLearners) }}
-                    <label class="checkbox">
-                        {{ form_widget(form.displayNotationMessageToLearners) }} {{ 'icap_dropzone_form_displayNotationMessageToLearners'|trans }}
-                    </label>
+                    <div class="checkbox">
+                        <label>
+                            {{ form_widget(form.displayNotationMessageToLearners) }} {{ 'icap_dropzone_form_displayNotationMessageToLearners'|trans }}
+                        </label>
+                    </div>
 
-                    <label class="checkbox">
-                        {{ form_errors(form.minimumScoreToPass) }}
-                        {{ 'icap_dropzone_form_minimumScoreToPass'|trans }}
-                        {{ form_widget(form.minimumScoreToPass, {'attr': {'class': 'input-mini'}}) }}
-                    </label>
+                    <div class="col-lg-offset-1 row">
+                        <label style="font-weight: normal;">
+                            <div class="col-lg-2" style="padding-left: 0px; padding-right: 8px;">
+                                {{ form_widget(form.minimumScoreToPass, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-lg-10" style="padding-top: 8px; padding-left: 0px;">
+                                {{ form_errors(form.minimumScoreToPass) }}
+                                {{ 'icap_dropzone_form_minimumScoreToPass'|trans }}
+                            </div>
+                        </label>
+                    </div>
                 </div>
             </div>
             <h4>{{ 'Planning'|trans }}</h4>
             {{ form_errors(form.manualPlanning) }}
-            <label class="radio">
-                {{ form_widget(form.manualPlanning.0) }}
-                <strong>{{ 'manualPlanning'|trans }}</strong>
-            </label>
-            <div class="control-group">
-                <div class="controls">
+            <div class="radio">
+                <label>
+                    {{ form_widget(form.manualPlanning.0) }}
+                    <strong>{{ 'manualPlanning'|trans }}</strong>
+                </label>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
                     {{ form_errors(form.manualState) }}
 
-                    {{ form_label(form.manualState.0) }}
-                    {{ form_widget(form.manualState.0) }}
+                    <div class="radio">
+                        {{ form_label(form.manualState.0) }}
+                        {{ form_widget(form.manualState.0) }}
+                    </div>
 
-                    {{ form_label(form.manualState.1) }}
-                    {{ form_widget(form.manualState.1) }}
+                    <div class="radio">
+                        {{ form_label(form.manualState.1) }}
+                        {{ form_widget(form.manualState.1) }}
+                    </div>
 
-                    <label class="radio required peer-review-options" for="icap_dropzone_form_manualState_2" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                        {{ 'peerReviewManualState'|trans }}
-                        {{ form_widget(form.manualState.2, {'attr': {'class': 'peer-review-options'}}) }}
-                    </label>
-
+                    <div class="radio required peer-review-options" for="icap_dropzone_form_manualState_2" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                        <label>
+                            {{ 'peerReviewManualState'|trans }}
+                            {{ form_widget(form.manualState.2, {'attr': {'class': 'peer-review-options'}}) }}
+                        </label>
+                    </div>
                 </div>
             </div>
 
@@ -131,7 +175,7 @@
                 <strong>{{ 'scheduleByDatePlanning'|trans }}</strong>
             </label>
 
-            <div class="control-group">
+            <div class="form-group">
                 {{ form_errors(form.startAllowDrop) }}
                 {{ form_label(form.startAllowDrop) }}
                 <div class="controls">
@@ -139,7 +183,7 @@
                 </div>
             </div>
 
-            <div class="control-group">
+            <div class="form-group">
                 {{ form_errors(form.endAllowDrop) }}
                 {{ form_label(form.endAllowDrop) }}
                 <div class="controls">
@@ -147,7 +191,7 @@
                 </div>
             </div>
 
-            <div class="control-group peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+            <div class="form-group peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
                 {{ form_errors(form.endReview) }}
                 {{ form_label(form.endReview) }}
                 <div class="controls">
