--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editCommon.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editCommon.html.twig
@@ -1,220 +1,217 @@
-{% extends "ICAPDropZoneBundle::layout.html.twig" %}
-{% block dropzone_breadcrumb %}
-    <li class="active">
-        <i class=".glyphicon .glyphicon-file"></i>{{ dropZone.resourceNode.name }}
-        <span class="divider">/</span>
-    </li>
-    <li class="active">Edit</li>
-{% endblock %}
+{% extends "ICAPDropZoneBundle:DropZone:edit.html.twig" %}
 
-{% block dropzone_content %}
-    <div class="container container-dropzone">
-        <header>
-            <a href="{{ path('icap_dropzone_drops', {'resourceId': dropZone.id}) }}">Drops</a>
-        </header>
-        <h2>Edit drop zone</h2>
-        <div class="navbar navbar-default" role="navigation">
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="{{ path('icap_dropzone_edit_common', {'resourceId': dropZone.id}) }}">
-                            {{ 'Common'|trans }}
-                        </a>
-                    </li>
-                    <li class="peer-review-options"{% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                        <a href="{{ path('icap_dropzone_edit_criteria', {'resourceId': dropZone.id}) }}">
-                            {{ 'Peer review criteria'|trans }}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ path('icap_dropzone_edit_participant', {'resourceId': dropZone.id}) }}">
-                            {{ 'Participant'|trans }}
-                        </a>
-                    </li>
-                </ul>
+{% block drop_zone_content_edit %}
+    <div class="navbar navbar-default" role="navigation">
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a href="{{ path('icap_dropzone_edit_common', {'resourceId': dropZone.id}) }}">
+                        {{ 'Common'|trans }}
+                    </a>
+                </li>
+                <li class="peer-review-options disabled"{% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                    <a href="#">
+                        {{ 'Peer review criteria'|trans }}
+                    </a>
+                </li>
+                <li class="disabled">
+                    <a href="#">
+                        {{ 'Participant'|trans }}
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <h3>{{ 'Common information'|trans }}</h3>
+    <form class="form-horizontal" role="form" method="POST" action="{{ path('icap_dropzone_update_common', {'resourceId': dropZone.id}) }}" {{ form_enctype(form) }}>
+        {{ form_errors(form) }}
+
+        <h4>{{ 'Instruction'|trans }}</h4>
+        <div class="form-group">
+            {{ form_errors(form.instruction) }}
+            <div class="col-lg-offset-2 col-lg-10">
+                {{ form_widget(form.instruction, {'attr': {'class': 'form-control'}}) }}
             </div>
         </div>
-        <h3>{{ 'Common information'|trans }}</h3>
-        <form class="form-horizontal" role="form" method="POST" action="{{ path('icap_dropzone_update_common', {'resourceId': dropZone.id}) }}" {{ form_enctype(form) }}>
-            {{ form_errors(form) }}
+        <h4>{{ 'Document type allowed'|trans }}</h4>
+        <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+                {{ form_errors(form.allowWorkspaceResource) }}
+                <div class="checkbox">
+                    <label>
+                        {{ form_widget(form.allowWorkspaceResource) }} {{ 'icap_dropzone_common_form_allowWorkspaceResource'|trans }}
+                    </label>
+                </div>
 
-            <h4>{{ 'Instruction'|trans }}</h4>
-            <div class="form-group">
-                {{ form_errors(form.instruction) }}
-                <div class="col-lg-offset-2 col-lg-10">
-                    {{ form_widget(form.instruction, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.allowUpload) }}
+                <div class="checkbox">
+                    <label>
+                        {{ form_widget(form.allowUpload) }} {{ 'icap_dropzone_common_form_allowUpload'|trans }}
+                    </label>
+                </div>
+
+                {{ form_errors(form.allowUrl) }}
+                <div class="checkbox">
+                    <label>
+                        {{ form_widget(form.allowUrl) }} {{ 'icap_dropzone_common_form_allowUrl'|trans }}
+                    </label>
                 </div>
             </div>
-            <h4>{{ 'Document type allowed'|trans }}</h4>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    {{ form_errors(form.allowWorkspaceResource) }}
-                    <div class="checkbox">
-                        <label>
-                            {{ form_widget(form.allowWorkspaceResource) }} {{ 'icap_dropzone_form_allowWorkspaceResource'|trans }}
-                        </label>
-                    </div>
-
-                    {{ form_errors(form.allowUpload) }}
-                    <div class="checkbox">
-                        <label>
-                            {{ form_widget(form.allowUpload) }} {{ 'icap_dropzone_form_allowUpload'|trans }}
-                        </label>
-                    </div>
-
-                    {{ form_errors(form.allowUrl) }}
-                    <div class="checkbox">
-                        <label>
-                            {{ form_widget(form.allowUrl) }} {{ 'icap_dropzone_form_allowUrl'|trans }}
-                        </label>
-                    </div>
+        </div>
+        <h4>{{ 'Type of evaluation'|trans }}</h4>
+        <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+                {{ form_errors(form.peerReview) }}
+                <div class="radio">
+                    <label>
+                        {{ 'icap_dropzone_common_form_StandardEvaluation'|trans }}
+                        {{ form_widget(form.peerReview.0) }}
+                    </label>
                 </div>
-            </div>
-            <h4>{{ 'Type of evaluation'|trans }}</h4>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    {{ form_errors(form.peerReview) }}
-                    <div class="radio">
-                        <label>
-                            {{ 'icap_dropzone_form_StandardEvaluation'|trans }}
-                            {{ form_widget(form.peerReview.0) }}
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            {{ 'icap_dropzone_form_PeerReviewEvaluation'|trans }}
-                            {{ form_widget(form.peerReview.1) }}
-                        </label>
-                    </div>
-
-                    <div class="col-lg-offset-1 row  peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                            <label style="font-weight: normal;">
-                                <div class="col-lg-2" style="padding-left: 0px; padding-right: 0px;">
-                                    {{ form_widget(form.expectedTotalCorrection, {'attr': {'class': 'form-control', 'type': 'number'}}) }}
-                                </div>
-                                <div class="col-lg-10" style="padding-top: 8px; padding-left: 8px;">
-                                    {{ form_errors(form.expectedTotalCorrection) }}
-                                    {{ 'icap_dropzone_form_expectedTotalCorrection'|trans }}
-                                </div>
-                            </label>
-                    </div>
-                    <div class="col-lg-offset-1 peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                        <div class="checkbox">
-                            <label>
-                                {{ form_errors(form.allowDropInReview) }}
-                                {{ 'icap_dropzone_form_allowDropInReview'|trans }}
-                                {{ form_widget(form.allowDropInReview) }}
-                            </label>
-                        </div>
-                    </div>
+                <div class="radio">
+                    <label>
+                        {{ 'icap_dropzone_common_form_PeerReviewEvaluation'|trans }}
+                        {{ form_widget(form.peerReview.1) }}
+                    </label>
                 </div>
-            </div>
-            <h4>{{ 'Rating'|trans }}</h4>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    {{ form_errors(form.displayNotationToLearners) }}
-                    <div class="checkbox">
-                        <label>
-                            {{ form_widget(form.displayNotationToLearners) }} {{ 'icap_dropzone_form_displayNotationToLearners'|trans }}
-                        </label>
-                    </div>
 
-                    {{ form_errors(form.displayNotationMessageToLearners) }}
-                    <div class="checkbox">
-                        <label>
-                            {{ form_widget(form.displayNotationMessageToLearners) }} {{ 'icap_dropzone_form_displayNotationMessageToLearners'|trans }}
-                        </label>
-                    </div>
-
-                    <div class="col-lg-offset-1 row">
+                <div class="col-lg-offset-1 row  peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
                         <label style="font-weight: normal;">
-                            <div class="col-lg-2" style="padding-left: 0px; padding-right: 8px;">
-                                {{ form_widget(form.minimumScoreToPass, {'attr': {'class': 'form-control'}}) }}
+                            <div class="col-lg-2" style="padding-left: 0px; padding-right: 0px;">
+                                {{ form_widget(form.expectedTotalCorrection, {'attr': {'class': 'form-control', 'type': 'number'}}) }}
                             </div>
-                            <div class="col-lg-10" style="padding-top: 8px; padding-left: 0px;">
-                                {{ form_errors(form.minimumScoreToPass) }}
-                                {{ 'icap_dropzone_form_minimumScoreToPass'|trans }}
+                            <div class="col-lg-10" style="padding-top: 8px; padding-left: 8px;">
+                                {{ form_errors(form.expectedTotalCorrection) }}
+                                {{ 'icap_dropzone_common_form_expectedTotalCorrection'|trans }}
                             </div>
                         </label>
-                    </div>
                 </div>
-            </div>
-            <h4>{{ 'Planning'|trans }}</h4>
-            {{ form_errors(form.manualPlanning) }}
-            <div class="radio">
-                <label>
-                    {{ form_widget(form.manualPlanning.0) }}
-                    <strong>{{ 'manualPlanning'|trans }}</strong>
-                </label>
-            </div>
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    {{ form_errors(form.manualState) }}
-
-                    <div class="radio">
-                        {{ form_label(form.manualState.0) }}
-                        {{ form_widget(form.manualState.0) }}
-                    </div>
-
-                    <div class="radio">
-                        {{ form_label(form.manualState.1) }}
-                        {{ form_widget(form.manualState.1) }}
-                    </div>
-
-                    <div class="radio required peer-review-options" for="icap_dropzone_form_manualState_2" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                <div class="col-lg-offset-1 peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                    <div class="checkbox">
                         <label>
-                            {{ 'peerReviewManualState'|trans }}
-                            {{ form_widget(form.manualState.2, {'attr': {'class': 'peer-review-options'}}) }}
+                            {{ form_errors(form.allowDropInReview) }}
+                            {{ 'icap_dropzone_common_form_allowDropInReview'|trans }}
+                            {{ form_widget(form.allowDropInReview) }}
                         </label>
                     </div>
                 </div>
             </div>
+        </div>
+        <h4>{{ 'Rating'|trans }}</h4>
+        <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+                {{ form_errors(form.displayNotationToLearners) }}
+                <div class="checkbox">
+                    <label>
+                        {{ form_widget(form.displayNotationToLearners) }} {{ 'icap_dropzone_common_form_displayNotationToLearners'|trans }}
+                    </label>
+                </div>
 
-            <label class="radio">
-                {{ form_widget(form.manualPlanning.1) }}
-                <strong>{{ 'scheduleByDatePlanning'|trans }}</strong>
+                {{ form_errors(form.displayNotationMessageToLearners) }}
+                <div class="checkbox">
+                    <label>
+                        {{ form_widget(form.displayNotationMessageToLearners) }} {{ 'icap_dropzone_common_form_displayNotationMessageToLearners'|trans }}
+                    </label>
+                </div>
+
+                <div class="col-lg-offset-1 row">
+                    <label style="font-weight: normal;">
+                        <div class="col-lg-2" style="padding-left: 0px; padding-right: 8px;">
+                            {{ form_widget(form.minimumScoreToPass, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="col-lg-10" style="padding-top: 8px; padding-left: 0px;">
+                            {{ form_errors(form.minimumScoreToPass) }}
+                            {{ 'icap_dropzone_common_form_minimumScoreToPass'|trans }}
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <h4>{{ 'Planning'|trans }}</h4>
+        {{ form_errors(form.manualPlanning) }}
+        <div class="radio">
+            <label>
+                {{ form_widget(form.manualPlanning.0) }}
+                <strong>{{ 'manualPlanning'|trans }}</strong>
             </label>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+                {{ form_errors(form.manualState) }}
 
-            <div class="form-group">
-                {{ form_errors(form.startAllowDrop) }}
-                {{ form_label(form.startAllowDrop) }}
-                <div class="controls">
-                    {{ form_widget(form.startAllowDrop) }}
+                <div class="radio">
+                    <label>
+                        {{ 'manualStateNotStarted'|trans }}
+                        {{ form_widget(form.manualState.0) }}
+                    </label>
+                </div>
+
+                <div class="radio">
+                    <label>
+                        {{ 'allowDropManualState'|trans }}
+                        {{ form_widget(form.manualState.1) }}
+                    </label>
+                </div>
+
+                <div class="radio required peer-review-options" for="icap_dropzone_common_form_manualState_2" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+                    <label>
+                        {{ 'peerReviewManualState'|trans }}
+                        {{ form_widget(form.manualState.2, {'attr': {'class': 'peer-review-options'}}) }}
+                    </label>
                 </div>
             </div>
+        </div>
 
-            <div class="form-group">
-                {{ form_errors(form.endAllowDrop) }}
-                {{ form_label(form.endAllowDrop) }}
-                <div class="controls">
-                    {{ form_widget(form.endAllowDrop) }}
-                </div>
-            </div>
+        <label class="radio">
+            {{ form_widget(form.manualPlanning.1) }}
+            <strong>{{ 'scheduleByDatePlanning'|trans }}</strong>
+        </label>
 
-            <div class="form-group peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
-                {{ form_errors(form.endReview) }}
-                {{ form_label(form.endReview) }}
-                <div class="controls">
-                    {{ form_widget(form.endReview) }}
-                </div>
+        <div class="form-group">
+            {{ form_errors(form.startAllowDrop) }}
+            <label for="icap_dropzone_common_form_startAllowDrop" class="col-lg-2 control-label">
+                {{ 'icap_dropzone_common_form_startAllowDrop'|trans }}
+            </label>
+            <div class="col-lg-10">
+                {{ form_widget(form.startAllowDrop, {'attr': {'class': 'form-control'}}) }}
             </div>
+        </div>
 
-            <div class="btn-group pull-right">
-                <button class="btn btn-default">Cancel</button>
-                <button type= "submit" class="btn btn-primary">Save and continue</button>
+        <div class="form-group">
+            {{ form_errors(form.endAllowDrop) }}
+            <label for="icap_dropzone_common_form_endAllowDrop" class="col-lg-2 control-label">
+                {{ 'icap_dropzone_common_form_endAllowDrop'|trans }}
+            </label>
+            <div class="col-lg-10">
+                {{ form_widget(form.endAllowDrop, {'attr': {'class': 'form-control'}}) }}
             </div>
-        {{ form_end(form) }}
-    </div>
+        </div>
+
+        <div class="form-group peer-review-options" {% if not dropZone.peerReview %}style="display: none;"{% endif %}>
+            {{ form_errors(form.endReview) }}
+            <label for="icap_dropzone_common_form_endReview" class="col-lg-2 control-label">
+                {{ 'icap_dropzone_common_form_endReview'|trans }}
+            </label>
+            <div class="col-lg-10">
+                {{ form_widget(form.endReview, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+
+        <div class="btn-group pull-right">
+            <a href="{{ path('claro_workspace_open_tool', {'workspaceId': workspace.getId(), 'toolName': 'resource_manager'}) }}" class="btn btn-default">{{ 'Cancel'|trans }}</a>
+            <button type= "submit" class="btn btn-primary">{{ 'Save and continue'|trans }}</button>
+        </div>
+    {{ form_end(form) }}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}}
     <script>
         $('document').ready(function() {
-            $('#icap_dropzone_form_peerReview_0').on('click', function() {
+            $('#icap_dropzone_common_form_peerReview_0').on('click', function() {
                 $('.peer-review-options').hide();
             });
-            $('#icap_dropzone_form_peerReview_1').on('click', function() {
+            $('#icap_dropzone_common_form_peerReview_1').on('click', function() {
                 $('.peer-review-options').show();
             });
         });
