--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/open.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/open.html.twig
@@ -1,6 +1,6 @@
 {% extends "ICAPDropZoneBundle::layout.html.twig" %}
 {% block dropzone_breadcrumb %}
-    <li class="active"><i class=".glyphicon .glyphicon-file"></i>{{ dropZone.resourceNode.name }}</li>
+    <li class="active"><span class="glyphicon icon-file"></span> {{ dropZone.resourceNode.name }}</li>
 {% endblock %}
 
 {% block dropzone_content %}
