--- a/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editAddCriterionForm.html.twig
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/views/DropZone/editAddCriterionForm.html.twig
@@ -1,4 +1,4 @@
-<form class="form-horizontal" method="POST" action="{{ path('icap_dropzone_edit_create_criterion', {'resourceId': dropZone.id, 'criterionId':criterion.id}) }}">
+<form class="form-horizontal" method="POST" action="{{ path('icap_dropzone_edit_create_criterion', {'resourceId': dropZone.id, 'page':page, 'criterionId':criterion.id}) }}">
     {{ form_errors(form) }}
 
     <div class="form-group">
@@ -12,7 +12,8 @@
     </div>
 
     <div class="form-group">
-        <div class="col-lg-offset-2 col-lg-10">
+        <div class="col-lg-offset-2 col-lg-10 btn-group form-buttons">
+            <a href="{{ path('icap_dropzone_edit_criteria_paginated', {'resourceId': dropZone.id, 'page':page}) }}" class="btn btn-default">{{ 'Cancel'|trans }}</a>
             <button type="submit" class="btn btn-primary">
                 {% if criterion.id == 0 %}
                     {{ 'Create'|trans }}
